# stockIQ

./: .gitignore  README.md  app.py  charts.py  config.py  data.py  indicators.py  pyproject.toml  requirements.txt  signals.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
cache/screener/: analyst_consensus.json  forward_pe.json  fundamentals.json  short_interest.json  ticker_metadata.json
config/: app.yml  cache.yml  indicators.yml  screeners.yml  seo.yml  ui.yml
data/: market.py
scripts/: README.md  build_analyst_consensus_cache.py  build_fundamentals_cache.py  build_metadata_cache.py  build_short_interest_cache.py
src/indexiq/: affiliate.py  cache_ttl.py  config.py  premium.py
src/indexiq/data/: __init__.py  market.py  screeners.py
src/indexiq/models/: __init__.py  ai_forecast.py  indicators.py  signals.py
src/indexiq/views/: about.py  ai_forecast.py  ai_forecast_page.py  analyzer.py  pricing.py  scanner_bounce_radar.py  scanner_munger_strategy.py  scanner_nasdaq_rsi.py  scanner_premarket.py  scanner_squeeze.py  scanner_strong_buy.py  scanner_strong_sell.py  screener.py  seo.py  spy_dashboard.py  spy_gap_table.py
src/stockiq/: config.py
src/stockiq/backend/: cache.py
src/stockiq/data/: __init__.py  gap_cache.py
src/stockiq/frontend/: theme.py
src/stockiq/models/: indicators.py
src/stockiq/views/: seo.py  (+1 more)
tests/: test_charts.py  test_indicators.py  test_signals.py
views/: about.py  ai_forecast.py  ai_forecast_page.py  bounce_radar.py  screener.py  search.py  spx_dashboard.py  spy_dashboard.py  spy_gap_table.py  squeeze_scanner.py  strong_buy.py  strong_sell.py
(+92 files in other folders)
